Fix a ton of bugs that were uncovered when trying to parse the tests.